force-app/main/default/objects/QCC_Source_to_Target_Object_Mapping__mdt/QCC_Source_to_Target_Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>QCC Source to Target Object Mapping</label>
    <pluralLabel>QCC Source to Target Object Mappings</pluralLabel>
</CustomObject>