force-app/main/default/objects/QCC_Source_to_Target_Object_Mapping__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>