force-app/main/default/objects/QCC_Source_to_Target_Object_Mapping__mdt/fields/Is_Relationship_Id__c.field-meta.xml
<CustomField>
    <fullName>Is_Relationship_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Relationship Id?</label>
    <type>Checkbox</type>
</CustomField>