force-app/main/default/objects/QCC_Source_to_Target_Object_Mapping__mdt/fields/Special_Logic_Name__c.field-meta.xml
<CustomField>
    <fullName>Special_Logic_Name__c</fullName>
    <label>Special Logic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>