force-app/main/default/objects/QCC_Source_to_Target_Object_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Object_to_Object</fullName>
                <default>true</default>
                <label>Object to Object</label>
            </value>
            <value>
                <fullName>Platform_Event_to_Object</fullName>
                <label>Platform Event to Object</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>