force-app/main/default/objects/QCC_Source_to_Target_Object_Mapping__mdt/listViews/All_Loyalty_Case_Creation.listView-meta.xml
<ListView>
    <fullName>All_Loyalty_Case_Creation</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Module_Name__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Is_Relationship_Id__c</columns>
    <columns>Parent_Object__c</columns>
    <columns>Has_Special_Logic__c</columns>
    <columns>Special_Logic_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Module_Name__c</field>
        <operation>startsWith</operation>
        <value>CREATE_CASE_</value>
    </filters>
    <label>All Loyalty Case Creation</label>
</ListView>