force-app/main/default/objects/QCC_Source_to_Target_Object_Mapping__mdt/listViews/All_Source_to_Target_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Source_to_Target_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Module_Name__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Parent_Object__c</columns>
    <columns>Has_Special_Logic__c</columns>
    <columns>Special_Logic_Name__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Field__c</field>
        <operation>equals</operation>
        <value>Subject</value>
    </filters>
    <label>All Source to Target Mappings</label>
    <language>en_US</language>
</ListView>